--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,5 +24,26 @@ jobs:
       # Runs a single command using the runners shell
       - name: Run a one-line script
         run: echo Hello, world!
+
+      - name: Run a multi-line script
+        run: |
+          ls -al
+
+      #Runs a set of commands using the runners script
+      - name: Run a multi-line script
+        run: |
+          echo add other actions to build
+          echo test, and deploy your project.
+      - name: check java version
+        run: java -version
+      - name: gradle build
+        run: gradle build
+      - name: gradlew build
+        run: gradlew build
+      - name: check docker
+        run: |
+          docker -v
+          docker
+
     outputs:
       tag: ${{ steps.checkout.outputs.tag }}
