--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,17 +10,22 @@ on:
   workflow_dispatch:
 
 jobs:
-# This workflow contains a single job called "build"
+  # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-  
+
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v4
-      - id: checkout
-        uses: actions/checkout@v4
+
+      # Set up Java
+      - uses: actions/setup-java@v4
+        with:
+          distribution: 'zulu' # See 'Supported distributions' for available options
+          java-version: '21'
+
       # Runs a single command using the runners shell
       - name: Run a one-line script
         run: echo Hello, world!
@@ -34,12 +39,16 @@ jobs:
         run: |
           echo add other actions to build
           echo test, and deploy your project.
+
       - name: check java version
         run: java -version
+
       - name: gradle build
         run: gradle build
+
       - name: gradlew build
         run: gradlew build
+
       - name: check docker
         run: |
           docker -v
