--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,7 +47,7 @@ jobs:
         run: gradle build
 
       - name: gradlew build
-        run: gradlew build
+        run: ./gradlew build
 
       - name: check docker
         run: |
