fix gradlew runner

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,6 +46,10 @@ jobs:
       - name: gradle build
         run: gradle build
 
+      # Ensure gradlew has execute permission
+      - name: Make gradlew executable
+        run: chmod +x gradlew
+
       - name: gradlew build
         run: ./gradlew build
 
