--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,5 +58,13 @@ jobs:
           docker -v
           docker
 
+      - name: docker build
+        run: |
+          docker build . -t demo-spring01.0
+          docker images -a
+      - name: docker login
+        run: docker login -u {{ secrets.dockerHubUser }} -p {{ secrets.dockerHubPassword }}
+
+
     outputs:
       tag: ${{ steps.checkout.outputs.tag }}
