--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,9 +62,11 @@ jobs:
         run: |
           docker build . -t demo-spring01.0
           docker images -a
-      - name: docker login
-        run: docker login -u ${{ secrets.dockerHubUser }} -p ${{ secrets.dockerHubPassword }}
-
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
     outputs:
       tag: ${{ steps.checkout.outputs.tag }}
