--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,13 +60,16 @@ jobs:
 
       - name: docker build
         run: |
-          docker build . -t demo-spring01.0
+          docker build . -t ${{ secrets.DOCKERHUB_USERNAME }}/demo-spring:1.0
           docker images -a
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Push Docker Image
+        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/demo-spring:1.0
+
 
     outputs:
       tag: ${{ steps.checkout.outputs.tag }}
