--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,9 +26,10 @@ jobs:
           distribution: 'zulu' # See 'Supported distributions' for available options
           java-version: '21'
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+      - name: Run Az Command
+        run: |
+          az account show
+          az group list
 
       - name: Run a multi-line script
         run: |
@@ -36,6 +37,8 @@ jobs:
 
       #Runs a set of commands using the runners script
       - name: Run a multi-line script
+        #Run even if above fail
+        if: always()
         run: |
           echo add other actions to build
           echo test, and deploy your project.
@@ -67,8 +70,8 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Push Docker Image
-        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/demo-spring:1.0
+#      - name: Push Docker Image
+#        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/demo-spring:1.0
 
 
     outputs:
